updating live cursors with better code

--- a/live-cursors/src/public/style.css
+++ b/live-cursors/src/public/style.css
@@ -9,4 +9,11 @@ body {
 .cursor {
     width: 30px;
     transition: all ease;
+    position: fixed;
+    top:0;
+    left:0;
+}
+
+.myCursor {
+    z-index: 999;
 }
